# cefr-workshop

./: .gitignore  README.md  demo_curls.sh  evaluate.py  generate_sample_data.py  hello_modal.py  model.py  prepare_data.py  pyproject.toml  serve.py  train.py
