[project]
name = "cefr-workshop"
version = "0.1.0"
description = "CEFR essay scoring workshop with DeBERTa-v3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "sentencepiece>=0.1.99",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "modal>=0.64.0",
]

[tool.uv]
dev-dependencies = []
